fix verticaltimeline visibility

--- a/src/pagecomponents/navbar/Navbar.css
+++ b/src/pagecomponents/navbar/Navbar.css
@@ -33,7 +33,7 @@
 
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   color: var(--secondary-text);
   opacity: 100;
 }
