--- a/src/pages/experience/Experience.css
+++ b/src/pages/experience/Experience.css
@@ -13,6 +13,11 @@
   object-fit: cover;
   z-index: -1;
 }
+.vertical-timeline-element-date {
+  font-size: 35px !important;
+  font-weight: 800 !important;
+  color: #fff !important;
+}
 @media only screen and (max-width: 700px) {
   .portfolio__experience {
     background: linear-gradient(270deg, #001d3d, #003566, #ffc300, #ffd60a);
